--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ on:
 name: CI
 
 jobs:
-  QA:
+  qa:
+    name: qa
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -31,10 +32,11 @@ jobs:
       - name: Run tests
         run: cargo test
 
-  Linux:
+  linux:
+    name: Build for Linux
     runs-on: ubuntu-latest
     needs:
-      - QA
+      - qa
     steps:
       - uses: actions/checkout@v4
 
@@ -53,10 +55,11 @@ jobs:
           name: smart-garden-gateway-doctor-linux
           path: target/release/smart-garden-gateway-doctor.tar
 
-  Windows:
+  windows:
+    name: Build for Windows
     runs-on: ubuntu-latest
     needs:
-      - QA
+      - qa
     steps:
       - uses: actions/checkout@v4
 
@@ -74,12 +77,13 @@ jobs:
           name: smart-garden-gateway-doctor-windows
           path: target/x86_64-pc-windows-gnu/release/smart-garden-gateway-doctor.exe
 
-  Release:
+  release:
+    name: Release
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     needs:
-      - Linux
-      - Windows
+      - linux
+      - windows
     permissions:
       contents: write
     steps:
